--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,6 +29,6 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <a href="./public/birthday-invite.html">Birthday Invite Project</a>
     <a href="./public/birthday-invite.html"><img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project" /></a>
     <hr />
-    <a href="./public/about.html">About me</a> <a href="./public/contact.html">Contacts</a>
+    <a href="./public/about.html">About me</a> <p>|</p> <a href="./public/contact.html">Contact me</a>
 </body>
 </html>
