--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!-- TODO 1: Create the HTML Boilerplate -->
+<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,11 +24,11 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Angela Yu's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr />
-    <a href="./public/movie-ranking.html">Movie Ranking Project</a><br />
-    <a href="./public/movie-ranking.html"><img src="./assets/images/movie-ranking.png" height="200" alt="birthday invite project" /></a><br />
-    <a href="./public/birthday-invite.html">Birthday Invite Project</a><br />
-    <a href="./public/birthday-invite.html"><img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project" /></a><br />
+    <a href="./public/movie-ranking.html">Movie Ranking Project</a> <br />
+    <a href="./public/movie-ranking.html"><img src="./assets/images/movie-ranking.png" height="200" alt="birthday invite project" /></a> <br />
+    <a href="./public/birthday-invite.html">Birthday Invite Project</a> <br />
+    <a href="./public/birthday-invite.html"><img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project" /></a> <br />
     <hr />
-    <a href="./public/about.html">About me</a> <p>|</p> <a href="./public/contact.html">Contact me</a>
+    <a href="./public/about.html">About me</a> | <a href="./public/contact.html">Contact me</a>
 </body>
 </html>
