Fix link to contacts page in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Tarcísio Lima</h1>
     <h3>🌻♾️ | Data & Analytics</h3>
     <img src="./public/foto3x4.png" alt="foto de Tarcísio" height="100" />
-    <a href="./public/contacts">Contacts</a>
+    <a href="./public/contact">Contacts</a>
 
     <hr/>
     
