--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Tarcísio Lima</h1>
     <h3>🌻♾️ | Data & Analytics</h3>
-    <img src="./public/foto3x4.png" alt="foto de Tarcísio" height="100" />
+    <img src="./public/foto3x4.png" alt="foto de Tarcísio" height="100" /><br/>
     <a href="./public/contact">Contacts</a>
 
     <hr/>
@@ -39,4 +39,8 @@
 
     <h2>Awards and Certifications</h2>
 </body>
+
+<footer>
+    <p>© Tarcísio Lima. All rights reserved.</p>
+</footer>
 </html>
