--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     
     <h2>Education</h2>
         <ul>
-            <li><h4><img src="./public/fiocruz_logo.jpg" alt="company logo" height="25" />FIOCRUZ - Fundação Oswaldo Cruz</h4></li>
+            <li><img src="./public/fiocruz_logo.jpg" alt="company logo" height="25" />FIOCRUZ - Fundação Oswaldo Cruz</li>
                 <ul>
                     <li>Master of Science - MS, Comunicação e SaúdeMaster of Science - MS, Comunicação e Saúde</li>
                     <li>2017 - 2019</li>
                 </ul>
-            <li><h4><img src="./public/estacio_logo.jpg" alt="company logo" height="25" />Estácio</h4></li>
+            <li><img src="./public/estacio_logo.jpg" alt="company logo" height="25" />Estácio</li>
                 <ul>
                     <li>Systems Analysis and Development</li>
                     <li>2025 - 2027</li>
@@ -36,17 +36,17 @@
     
     <h2>Work Experience
         <ul>
-            <li><h4><img src="./public/epbrasil_logo.jpg" alt="company logo" height="25" />agência eixos</h4></li>
+            <li><img src="./public/epbrasil_logo.jpg" alt="company logo" height="25" />agência eixos</li>
                 <ul>
                     <li>Head of Marketing</li>
                     <li>2023 - 2024</li>
                 </ul>
-            <li><h4><img src="./public/approach_comunicacao_logo.jpg" alt="company logo" height="25" />Approach Comunicação</h4></li>
+            <li><img src="./public/approach_comunicacao_logo.jpg" alt="company logo" height="25" />Approach Comunicação</li>
                  <ul>
                     <li>Communications Manager</li>
                     <li>2021 - 2023</li>
                 </ul>
-            <li><h4><img src="./public/petrobras_logo.jpg" alt="company logo" height="25" />Petrobras</h4></li>
+            <li><img src="./public/petrobras_logo.jpg" alt="company logo" height="25" />Petrobras</li>
                  <ul>
                     <li>Communications Analyst</li>
                     <li>2009 - 2016</li>
