Link external stylesheet and remove inline styles
Removed inline styles and linked external stylesheet.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Resume | Tarcísio Lima</title>
-    <style> html {background: blue
-                 }
-    </style>
+    <link rel:"stylesheet" href:".style.css" />
 </head>
 
 <body>
