Add a new div for personal information section

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 
 <body>
+    <div id=1>
     <h1>Tarcísio Lima</h1>
     <h3>🌻♾️ | Data & Analytics</h3>
     <img src="./public/foto3x4.png" alt="foto de Tarcísio" height="100" /><br/>
     <a href="./public/contact">Contacts</a>
-
+    </div>
+    
     <hr/>
     
     <h2>Summary</h2>
