--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 </head>
 
 <body>
+
+    <div id:"float">
+    <a href="https://wa.me/5521998075730"><img class="whatsapp" src=".public/whatsapp_logo.png" /></a>
+    </div>
+    
     <div id="top">
     <h1>Tarcísio Lima</h1>
     <h3>🌻♾️ | Data & Analytics</h3>
-    <img class="foto" src="./public/Tarcisio 1x1.png" alt="foto de Tarcísio" height="100" /><br/>
+    <img class="foto" src="./public/Tarcisio 1x1.png" alt="foto de Tarcísio" /><br/>
     <a href="./public/contact">Contacts</a>
     </div>
     
