--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id:"float">
-    <a href="https://wa.me/5521998075730"><img class="whatsapp" src=".public/whatsapp_logo.png" /></a>
+    <a href="https://wa.me/5521998075730"><img class="whatsapp" src="./public/whatsapp_logo.png" /></a>
     </div>
     
     <div id="top">
