--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
 
     <header>
-        <a></a>
+        <p class="menu">Tarcísio Lima</p>
+        <a class="menu">Home</a>
+        <a class="menu">Resume</a>
+        <a class="menu">Projects</a>
+        <a class="menu">Contacts</a>
     </header>
     
     <div id:"float">
