--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     
     <div id:"float">
-    <a href="https://wa.me/5521998075730"><img class="whatsapp" src="./public/whatsapp_logo.png" /></a>
+    <a href="https://wa.me/5521998075730"><img class="whatsapp" src="./public/whatsapp_logo.jpg" /></a>
     </div>
     
     <div id="top">
